<resources>
    <string name="env">@string/test</string>
    <string name="prod">PROD</string>
    <string name="test">TEST</string>
    <string name="commission">2900</string>
    <string name="group">9</string>
    <string name="patron_actual">patron_actual</string>
    <string name="patron_nuevo">patron_nuevo</string>

    <string name="app_name">RespirApp</string>
    <string name="title_activity_menu_2">activity_menu_2</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_respiracion">Ejercicios de respiración</string>
    <string name="menu_ejercicios_del_dia">Ejercicios del día</string>
    <string name="menu_patron">Modificar patron</string>
    <string name="menu_sensores">Listado sensores</string>
    <string name="menu_logout">Cerrar sesión</string>

    <string name="bienvenida">Una aplicación pensada para vos donde podrás mejorar tu capacidad respiratoria a través de ejercicios de yoga basados en Pranayama</string>

    <string name="Categoría1">Enfriante / Relajante</string>
    <string name="Categoría2">Equilibrante</string>
    <string name="Categoría3">Calentante / Energizante</string>

    <string name="msgAceptar">SI</string>
    <string name="msgDenegar">NO</string>

    <string name="tituloPatron"><font fgcolor='#FFFFFF'>Dibuje el patrón</font></string>
    <string name="tituloEjerciciosDia">Ejercicios del día</string>
    <string name="titulo_ejercicios_enfriantes">Ejercicios enfriantes</string>
    <string name="titulo_ejercicios_equilibrantes">Ejercicios equilibrantes</string>
    <string name="titulo_ejercicios_calentantes">Ejercicios calentantes</string>

    <color name="colorFuenteBlanco">#FFFFFF</color>
    <color name="colorTextoCategorias">#e2e9e9</color>
    <color name="colorTextoBienvenida">#ffd9cc</color>
    <color name="colorTextoTitulo">#767676</color>
    <color name="colorTextoExplicacion">#424242</color>
    <color name="colorSeparadorTexto">#4D4D4D</color>
</resources>
