<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Principal">
        <menu>
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/img_home"
                android:title="@string/menu_home" />
            <item
                android:id="@+id/nav_respiracion"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_respiracion" />
            <item
                android:id="@+id/nav_ejercicios_del_dia"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_ejercicios_del_dia" />
        </menu>
    </item>

    <item android:title="Ajustes">
        <menu>
            <item
                android:id="@+id/nav_patron"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_patron" />
            <item
                android:id="@+id/nav_sensores"
                android:icon="@drawable/ic_menu_lista"
                android:title="@string/menu_sensores" />
        </menu>
    </item>

</menu>