<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.respirapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_respiracion"
        android:name="com.example.respirapp.ui.respiraciones.FragmentRespiraciones"
        android:label="@string/menu_respiracion"
        tools:layout="@layout/fragment_respiraciones" />

    <fragment
        android:id="@+id/nav_ejercicios_del_dia"
        android:name="com.example.respirapp.ui.slideshow.FragmentEjerciciosDia"
        android:label="@string/menu_ejercicios_del_dia"
        tools:layout="@layout/fragment_ejercicios_dia" />

    <fragment
        android:id="@+id/nav_patron"
        android:name="com.example.respirapp.ui.tools.ToolsFragment"
        android:label="@string/menu_patron"
        tools:layout="@layout/fragment_tools" />
    <fragment
        android:id="@+id/nav_sensores"
        android:name="com.example.respirapp.ui.sensores.FragmentSensores"
        android:label="@string/menu_patron"
        tools:layout="@layout/fragment_sensores" />
</navigation>