<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:weightSum="3">
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/categoria1"
        android:gravity="center">

        <TextView
            android:id="@+id/textCategoria1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/Categoría1"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textColor="@color/colorTextoCategorias"
            android:textSize="50dp"
            android:textAlignment="center"
            android:background="#5000"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@android:color/black" />
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/categoria2"
        android:gravity="center">
        <TextView
            android:id="@+id/textCategoria2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/Categoría2"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textColor="@color/colorTextoCategorias"
            android:textSize="50dp"
            android:textAlignment="center"
            android:background="#5000"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@android:color/black" />
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/categoria3"
        android:gravity="center">
        <TextView
            android:id="@+id/textCategoria3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/Categoría3"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textColor="@color/colorTextoCategorias"
            android:textSize="50dp"
            android:textAlignment="center"
            android:background="#5000"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    </RelativeLayout>
</LinearLayout>